@startuml
'https://plantuml.com/sequence-diagram

class Prenda{
    -tipoPrenda:TipoPrenda
    -colorPrimario: Color
    -colorSecundario:Color
    -material:Material
    +tipoDePrenda()
    +categoria()
    +material()
}

Enum TipoPrenda{
    -categoria: Enum

    +categoria()
}

class Color{
    -rojo:Integer
    -verde:Integer
    -azul:Integer
}
enum Categoria
enum Material

Prenda ---> TipoPrenda
Prenda --->Color
Prenda --->Material
TipoPrenda --->Categoria
@enduml